feat: adicionado recuperacao de usuarios, adicionado autorização atraves de token jwt
